--- a/projecte/ProjecteAG.css
+++ b/projecte/ProjecteAG.css
@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-.MainContent {
-    border: solid black 1px;
-}
-=======
 @charset "UTF-8";
 /*!
  * Bootstrap  v5.2.3 (https://getbootstrap.com/)
@@ -2824,7 +2819,7 @@ textarea.form-control-lg {
 .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
-  --bs-btn-font-family: ;
+  --bs-btn-font-family: Ink free;
   --bs-btn-font-size: 1rem;
   --bs-btn-font-weight: 400;
   --bs-btn-line-height: 1.5;
@@ -10937,5 +10932,4 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
-}/*# sourceMappingURL=ProjecteAG.css.map */
->>>>>>> 06d76ce2ffd4790144241939dc27fad8a05187bb
+}/*# sourceMappingURL=Style.css.map */
