--- a/projecte/ProjecteAGcss.css
+++ b/projecte/ProjecteAGcss.css
@@ -1,7 +1,14 @@
 header{
     text-align: center;
     height: 150px;
-    color: black;
     padding-top: 2em;
     color: white;
+}
+
+footer{
+    height: 100px;
+    color: white;
+    bottom: 0px;
+    position:absolute;
+
 }
