--- a/projecte/ProjecteAGcss.css
+++ b/projecte/ProjecteAGcss.css
@@ -8,7 +8,9 @@ header{
     padding-top: 2em;
     color: white;
     background-color: #2C3E50;
+    font-family: monaco,Consolas,Lucida Console,monospace;
 }
+
 .Mcontent {
     border: 1px, solid, black;
 }
