--- a/projecte/ProjecteAGcss.css
+++ b/projecte/ProjecteAGcss.css
@@ -9,7 +9,11 @@ header{
     font-family: monaco,Consolas,Lucida Console,monospace;
     width: 100%;
 }
+
 /* */
+
+
+
 .Mcontent {
     border: 1px, solid, black;
 }
@@ -36,10 +40,10 @@ div{
 }
 footer {
   color: white;
-  padding-bottom: 2em;
   width: 100%;
   position: relative;
-
+  margin: 0 auto;
+  padding: 5px;
 }
 footer h3 {
   margin-bottom: 20px;
