--- a/projecte/ProjecteAG.scss
+++ b/projecte/ProjecteAG.scss
@@ -31,10 +31,4 @@ $carousel-dark-caption-color:        $black;
 $carousel-dark-control-icon-filter:  invert(1) grayscale(100);
 
 
-
-
-
-
-
-
-@import "./node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
