--- a/projecte/ProjecteAG.scss
+++ b/projecte/ProjecteAG.scss
@@ -1,3 +1,6 @@
+/*  Imatges movils  */
+
+//fletxes
 $carousel-control-color:             $white;
 $carousel-control-width:             15%;
 $carousel-control-opacity:           .5;
@@ -29,6 +32,6 @@ $carousel-transition:                transform $carousel-transition-duration eas
 $carousel-dark-indicator-active-bg:  $black;
 $carousel-dark-caption-color:        $black;
 $carousel-dark-control-icon-filter:  invert(1) grayscale(100);
-
+/**/
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
