--- a/css/ProjecteAGcss.css
+++ b/css/ProjecteAGcss.css
@@ -47,6 +47,7 @@ footer {
   color: yellow;
   width: 100%;
   position: relative;
+  bottom: 0;
   padding: 5px;
 }
 
@@ -73,6 +74,9 @@ footer:link {
   text-decoration: none;
   color: yellow;
 }
+
+
+
 
 /* */
 
